# smallfolk_cpp

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md  main.cpp  smallfolk.cpp  smallfolk.h
.github/workflows/: ci.yml
